--- a/src/UserInterface.Mvc/Views/Shared/Common.Master
+++ b/src/UserInterface.Mvc/Views/Shared/Common.Master
@@ -14,15 +14,32 @@
     <script type="text/javascript" src="/Scripts/JqueryUi/js/jquery-ui-1.8.22.custom.min.js"></script>
     <script src="/Scripts/jquery.alerts.js" type="text/javascript"></script>
     <link href="/Content/Styles/jquery.alerts.css" rel="stylesheet" type="text/css" />
-    <!-- Suporte a jQuery UI -->
-    <!-- Menu -->
-    <script src="/Scripts/menu.js" type="text/javascript"></script>
     <!-- Datas -->
     <link href="/Scripts/JqueryUi/development-bundle/themes/base/jquery.ui.datepicker.css"
         rel="stylesheet" type="text/css" />
     <script src="/Scripts/jquery.ui.datepicker-pt-BR.js" type="text/javascript"></script>
     <!-- Funçoes -->
     <script src="/Scripts/js-functions.js" type="text/javascript"></script>
+    <style type="text/css">
+        .btnLink
+        {
+            padding: 0px 20px;
+            text-decoration: none;
+            position: relative;
+            font-size: 18px;
+            width: 140px;
+            text-align: center;
+        }
+        #conteudo
+        {
+            border: 1px solid;
+            clear: both;
+            height: 85%;
+            margin-left: 7.5%;
+            width: 85%;
+            height: 85%;
+        }
+    </style>
     <script type="text/javascript">
         var BACKSPACE_KEY = 8;
 
@@ -40,19 +57,32 @@
     %>
     <script type="text/javascript">
         $(function () {
-            $("#titulo").html('<%= authorizer.GetFunctionTitle(controller, action) %>');
+            $('.btnLink').hover(
+					function () { $(this).addClass('ui-state-hover'); },
+					function () { $(this).removeClass('ui-state-hover'); }
+				);
         });
     </script>
     <asp:ContentPlaceHolder ID="HeadContentPlaceHolder" runat="server" />
 </head>
 <body>
     <div>
-        <div id="header">
-            <h2>BRATO - Boletim de Registro de Acidentes de Trânsito Online</h2>
+        <div class="controleAcesso inteiro" style="background-color: Gray; height: 80px;">
+            <h2>
+                BRATO - Boletim de Registro de Acidentes de Trânsito Online<a href="#" id="btnLogin" class="ui-state-default ui-corner-all btnLink"
+                style="float: right; width: 50px;">Login</a></h2>
+            RESERVADO PARA LOGO - Header
         </div>
-        <%// Html.RenderPartial("Menu"); %>
+        <div class="formItem inteiro">
+        </div>
+        <div class="menu inteiro">
+            <a href="#" id="btnBrat" class="ui-state-default ui-corner-all btnLink" style="float: none;">
+                Consultar BRAT</a> <a href="#" id="´btnRelatorio" class="ui-state-default ui-corner-all btnLink"
+                    style="float: none;">Relatórios</a>
+        </div>
+        <br style="clear: both;" />
         <div id="content">
-            <div style="clear: both;">
+            <div id="conteudo">
                 <asp:ContentPlaceHolder ID="MainContentPlaceHolder" runat="server">
                     <% var s = Html.ValidationSummary("Ocorreram os seguintes erros:"); %>
                     <% using (Html.BeginForm())
